[package]
name = "a2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
derive_more = "0"
itertools="0"
array2d="0.2"
num = "0.1"
lazy_static = "1"
bimap = "0.6"
#z3 = {version="0.11.2"}
#z3d = "0.1"
multimap = "0.8"
counter = "0.5"
hex = "0.3"
bitreader = "0.3"
ndarray = "0.15"